<resources>
    <string name="app_name" translatable="false">Password Manager</string>

    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="see_app_onboaridng">See App On boarding</string>
    <string name="rate_app">Rate App</string>
    <string name="on_boarding_screen">On Boarding Screen</string>
    <string name="check_my_other_apps">Check my other apps</string>

    <string name="filter">Filter</string>
    <string name="share_app">Share App</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select">Select</string>

    <string name="slide_1_title">Password Manager App</string>
    <string name="slide_1_desc">App to manage your passwords in a very simple yet secured way!</string>

    <string name="slide_2_title">Secured!</string>
    <string name="slide_2_desc">The account details are stored in your device and not on a cloud service. The app does not require internet connection.</string>

    <string name="slide_3_title">Sorting and Searching</string>
    <string name="slide_3_desc">Alphabetically sort and search for any password you are looking for!</string>

    <string name="slide_4_title">Password Generator</string>
    <string name="slide_4_desc">Lets your generate passwords for you, which you don\'t have to remember</string>

    <string name="update_key">Update Key</string>

    <string name="about_app">App to manage your passwords in a very simple and secured way! The passwords are stored in your device and not on a cloud. The app does not require internet connection / permission.</string>

    <string name="share_text">TODO - SHARE TEXT</string>
    <string name="enter_app_key">Enter App key</string>
    <string name="save">Save</string>
    <string name="enter">Enter Key</string>
    <string name="re_enter_key">Re-Enter Key</string>
    <string name="enter_key">Enter Key</string>
    <string name="empty_fields">Empty Field(s)</string>
    <string name="keys_should_be_same">keys should be same</string>
    <string name="incorrect_key_entered">Incorrect Key Entered</string>
    <string name="add_account_details">Add Account Details</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_additional_information_optional">Enter Additional Info</string>
    <string name="update_account_details">Update Account Details</string>
    <string name="delete_account_details">Delete Account Details</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="ok">Ok</string>

</resources>
