<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <!--private String username;-->
    <!--private String password;-->

    <Button
        android:id="@+id/update_account_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/update_account_details"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_account_details"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/enter_title"
                android:textColor="#403f3f"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/enter_username"
                android:textColor="#403f3f"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/enter_password"
                    android:textColor="#403f3f"
                    android:textSize="18sp" />


                <ImageButton
                    android:id="@+id/password_generator"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/password_generator" />

            </LinearLayout>

            <EditText
                android:id="@+id/additional_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/enter_additional_information_optional"
                android:textColor="#403f3f"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>